--- a/themes/flour/assets/src/app.scss
+++ b/themes/flour/assets/src/app.scss
@@ -241,6 +241,7 @@ svg {
   color: $black-color;
   vertical-align: top;
   border-color: $border-color;
+  border-spacing: 0;
 
   tr, td, thead, tbody {
     border-color: inherit;
@@ -253,12 +254,19 @@ svg {
   }
 
   tr {
-    border-width: 1px 0;
+    border-width: 0;
   }
 
   td, th {
     padding: 10px 8px;
-    border-width: 0 1px;
+    border-width: 1px;
+    border-top: 0;
+    border-left: 0;
+
+    &:first-child {
+      border-top: 1px solid $border-color;
+      border-left: 1px solid $border-color;
+    }
   }
 }
 
