--- a/themes/flour/assets/src/elements/header/index.scss
+++ b/themes/flour/assets/src/elements/header/index.scss
@@ -24,7 +24,7 @@
     &_bottom {
       padding: 15px 0 10px;
       position: relative;
-      background: $light-color;
+      background: #f4f4f4;
     }
   }
 
