--- a/plugins/acme/contactform/views/mail/message.htm
+++ b/plugins/acme/contactform/views/mail/message.htm
@@ -1,7 +1,7 @@
 <p>
   Вам пришло сообщение {% if user_name %} от <b>{{ user_name }}</b> - {% endif %}<b>{{ user_phone }}</b>
 </p>
-{% if user_mail %}
+{% if user_email %}
 <p>
   E-mail: {{ user_email }}
 </p>
