--- a/themes/flour/assets/src/app.scss
+++ b/themes/flour/assets/src/app.scss
@@ -237,7 +237,7 @@ svg {
 
 .table {
   width: 100%;
-  min-width: 768px;
+//   min-width: 768px;
   margin-bottom: 1rem;
   color: $black-color;
   vertical-align: top;
@@ -245,9 +245,9 @@ svg {
   border-spacing: 0;
   border-top: 1px solid $border-color;
 
-  @media(min-width: 768px) {
-    min-width: auto;
-  }
+//   @media(min-width: 768px) {
+//     min-width: auto;
+//   }
 
   tr, td, thead, tbody {
     border-color: inherit;
